shasha |add upload and download

--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -3,11 +3,12 @@
 <div id="paintings">
   <% for painting in @gallery.paintings %>
     <div class="painting">
-      <%= image_tag painting.image_url(:thumb) if painting.image? %>
+    
       <div class="name"><%= painting.name %></div>
       <div class="actions">
         <%= link_to "edit", edit_painting_path(painting) %> |
-        <%= link_to "remove", painting, :confirm => 'Are you sure?', :method => :delete %>
+        <%= link_to "remove", painting, :confirm => 'Are you sure?', :method => :delete %> |
+        <%= link_to "download", download_painting_path(painting) =%>
       </div>
     </div>
   <% end %>
