--- a/app/views/paintings/_form.html.erb
+++ b/app/views/paintings/_form.html.erb
@@ -6,6 +6,10 @@
     <%= f.text_field :name %>
   </p>
   <p>
+    <%= f.label :description%><br />
+    <%= f.text_field :description%>
+  </p>
+  <p>
     <%= f.file_field :image %>
   </p>
   <p><%= f.submit %></p>
